--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   }
 </script>
 
-<body style="font-size:24pt; padding-top:50px; text-align:center">
-  <a href="http://www.bappo.com"> go to bappo </a>
+<body style="font-size:24pt; color:#ddd; padding-top:100px; text-align:center">
+      Loading
 </body>
 
 </html>
