--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <script>
   window.onload = function(){
-    window.location.assign("http://www.bappo.com");
+    window.location.assign("http://qa.systemromeo.com");
   }
 </script>
 
