--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 <script>
   window.onload = function(){
+    if(navigator.connection.type==0)
+    {
+        alert('This application requires internet. Please connect to the internet.');
+    }
+    else if(navigator.connection.type=='none')
+    {
+        alert('This application requires internet. Please connect to the internet.');
+    }
+    else
+    {}
     window.location.assign("http://qa.systemromeo.com");
   }
 </script>
