--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
   <meta charset="UTF-8" />
   <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Language" content="en_US" />
+  <script src="/assets/jquery.js"></script>
   
   <title>Home</title>
   <meta content="authenticity_token" name="csrf-param" />
 </head>
 <script>
+  window.goodConnection = true;
   window.onload = function(){
-    if(navigator.connection.type==0)
-    {
-        alert('This application requires internet. Please connect to the internet.');
-    }
-    else if(navigator.connection.type=='none')
-    {
-        alert('This application requires internet. Please connect to the internet.');
-    }
-    else
-    {}
-    window.location.assign("http://qa.systemromeo.com");
+    $.ajax({
+      type: 'GET',
+      dataType: "script",
+      url: "http://qa.systemromeo.com/launch_mobile_app",
+      headers: {
+        "X-Requested-With": "XMLHttpRequest"
+      },
+      error:{
+        window.goodConnection = false;
+        return false;
+      }
+    }).fail(function (jqxhr, settings, exception) {
+        window.goodConnection = false;
+        alert('Server could not be reached. Please check your internet connection.');
+    });
   }
 </script>
 
