--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     $.ajax({
       type: 'GET',
       dataType: "script",
-      url: "http://qa.systemromeo/launch_mobile_app",
+      url: "http://qa.systemromeo.com/launch_mobile_app",
       headers: {
         "X-Requested-With": "XMLHttpRequest"
       },
