--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
           window.goodConnection = false;
       });      
     }
-    // launchMobileApp();
-            $(".loading").hide();
-            $(".notloading").show();
-
+    launchMobileApp();
   }
   
   window.openbappo = function() {
@@ -63,9 +60,6 @@
       </div>  
       <div class="button" onclick="launchMobileApp()">
           Try again
-      </div>  
-      <div class="button" onclick="openbappo()">
-          Open Direct
       </div>  
   </div>
 </body>
