--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <div class='loading'>
       <div class="message">
-        Loading123
+        Loading
       </div>  
   </div>
   <div class=notloading style="display:none">
